Removed dates and added links for projects

--- a/resume.tex
+++ b/resume.tex
@@ -175,20 +175,20 @@
 
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Mini Melbourne} $|$ \emph{Fullstack, Live data, React, Mapbox, FastAPI}}{February 2021 -- Present}
+          {\textbf{Mini Melbourne} $|$ \emph{Fullstack, Live data, React, Mapbox, FastAPI}}{\href{https://github.com/weLoveTrainz/MiniMelbourne}{GitHub} - \href{https://devpost.com/software/minimebourne}{DevPost}}
           \resumeItemListStart
             \resumeItem{A live train map of Melbourne, built during UniHack 2022, winning the PwC Data Analytics prize}
             \resumeItem{Built using FastAPI for backend to serve data, with React rendering the data with Mapbox}
           \resumeItemListEnd
 
       \resumeProjectHeading
-          {\textbf{SETools} $|$ \emph{Data Visualisation, Python, Scraping}}{February 2021 -- Present}
+          {\textbf{SETool} $|$ \emph{Data Visualisation, Python, Scraping}}{\href{https://github.com/saikumarmk/SETool}{GitHub} - \href{http://http://setool.herokuapp.com/}{Site} }
           \resumeItemListStart
             \resumeItem{A web-based visualisation tool for comparing units, coded in Python and Dash}
           \resumeItemListEnd
 
           \resumeProjectHeading
-          {\textbf{uwucode} $|$ \emph{Language Design, Rust}}{February 2021 -- Present}
+          {\textbf{uwucode} $|$ \emph{Language Design, Rust}}{\href{https://github.com/saikumarmk/uwucode}{GitHub}}
           \resumeItemListStart
             \resumeItem{A toy programming language designed in Rust, with a homemade parser to learn about language design}
           \resumeItemListEnd
