--- a/resume.tex
+++ b/resume.tex
@@ -203,7 +203,7 @@
     \small{\item{
      \textbf{Languages}{: Python, C/C++, R, Rust, MATLAB, Wolfram Mathematica} \\
      \textbf{Libraries}{: Data science (Pandas, NumPy, SciPy, PyTorch, Seaborn), FastAPI, Dash/Plotly,} \\
-     \textbf{Mathematics}{: Graph Theory, Computational Mathematics, Linear Algebra, Real+Complex Analysis, Multivariate Calculus, Abstract Algebra}
+     \textbf{Mathematics}{: Graph Theory, Computational Mathematics, Linear Algebra, Real+Complex Analysis, Multivariate Calculus, Abstract Algebra, Optimisation and Operations Research}
     }}
  \end{itemize}
 
