Aus spelling of honours

--- a/resume.tex
+++ b/resume.tex
@@ -120,7 +120,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Monash University}{Expected December 2023}
-      {Bachelor of Applied Data Science Honors}{Melbourne, VIC}
+      {Bachelor of Applied Data Science Honours}{Melbourne, VIC}
           \resumeItemListStart
             \resumeItem{WAM/GPA: 84}
             \resumeItem{Coursework: Data science related projects, algorithms and data structures and applied mathematics}
