Added winter research

--- a/resume.tex
+++ b/resume.tex
@@ -111,7 +111,8 @@
     \textbf{\Huge \scshape Sai kumar Murali krishnan} \\ \vspace{1pt}
     \small 04-223-33540 $|$ \href{mailto:saikumarmuralikrishnan@gmailcom}{\underline{saikumarmuralikrishnan@gmail.com}} $|$ 
     \href{https://www.linkedin.com/in/sai-kumar-murali-krishnan/}{\underline{https://www.linkedin.com/in/sai-kumar-murali-krishnan/}} $|$
-    \href{https://github.com/saikumarmk}{\underline{github.com/saikumarmk}}
+    \href{https://github.com/saikumarmk}{\underline{github.com/saikumarmk}} $|$
+    \href{https://saikumarmk.com}{\underline{saikumarmk.com}}
 \end{center}
 
 
@@ -122,7 +123,7 @@
       {Monash University}{Expected December 2023}
       {Bachelor of Applied Data Science Honours}{Melbourne, VIC}
           \resumeItemListStart
-            \resumeItem{WAM/GPA: 84}
+            \resumeItem{WAM/GPA: 85}
             \resumeItem{Coursework: Data science related projects, algorithms and data structures and applied mathematics}
 
         \resumeItemListEnd
@@ -132,16 +133,20 @@
 %-----------EXPERIENCE-----------
 \section{Experience}
   \resumeSubHeadingListStart
-
-    \resumeSubheading
-      {Research Assistant}{November 2021 – January 2022}
+    \resumeSubheading{Winter Research Assistant}{June 2022 – July 2022}
+    {Monash University}{Melbourne, VIC}
+    \resumeItemListStart
+      \resumeItem{Devised a genetic programming framework to a game theoretic problem via simulation in Julia \textbf{\href{https://github.com/saikumarmk/paramless}{here}}}
+      \resumeItem{Coordinated with a professor to gradually investigate feasibility of studying function valued traits to study scientist journal dynamics}
+    \resumeItemListEnd
+    
+    \resumeSubheading{Summer Research Assistant}{November 2021 – January 2022}
       {Monash University}{Melbourne, VIC}
       \resumeItemListStart
-        \resumeItem{Scraped and wrangled commit diffs from over 30,000 deep-learning libraries}
-        \resumeItem{Extraction and inference of evolution of popular deep-learning libraries}
-        \resumeItem{Experience with AutoML technologies such as AutoKeras and NAS}
+        \resumeItem{Scraped and wrangled commit diffs from over 30,000 deep-learning libraries using GitHub's REST API}
+        \resumeItem{Extraction, tagging, and inference of evolution of popular deep-learning libraries}
       \resumeItemListEnd
-      
+
     \resumeSubheading
       {Co-founder and Tutor}{February 2020 – Present}
       {Contour Education}{Melbourne, VIC}
