--- a/resume.tex
+++ b/resume.tex
@@ -110,9 +110,9 @@
 \begin{center}
     \textbf{\Huge \scshape Sai kumar Murali krishnan} \\ \vspace{1pt}
     \small 04-223-33540 $|$ \href{mailto:saikumarmuralikrishnan@gmailcom}{\underline{saikumarmuralikrishnan@gmail.com}} $|$ 
-    \href{https://www.linkedin.com/in/sai-kumar-murali-krishnan/}{\underline{https://www.linkedin.com/in/sai-kumar-murali-krishnan/}} $|$
-    \href{https://github.com/saikumarmk}{\underline{github.com/saikumarmk}} $|$
-    \href{https://saikumarmk.com}{\underline{saikumarmk.com}}
+    \href{https://www.linkedin.com/in/sai-kumar-murali-krishnan/}{\underline{LinkedIn}} $|$
+    \href{https://github.com/saikumarmk}{\underline{GitHub: saikumarmk}} $|$
+    \href{https://saikumarmk.com}{\underline{Personal Site}}\\ Software Engineer and Data Scientist
 \end{center}
 
 
@@ -125,6 +125,7 @@
           \resumeItemListStart
             \resumeItem{WAM/GPA: 85}
             \resumeItem{Coursework: Data science related projects, algorithms and data structures and applied mathematics}
+            \resumeItem{Achievements: Dean's List Award for academic excellence, Summer and Winter Research scholarships}
 
         \resumeItemListEnd
 
@@ -133,18 +134,25 @@
 %-----------EXPERIENCE-----------
 \section{Experience}
   \resumeSubHeadingListStart
+    \resumeSubheading{Data Science Intern }{July 2022 – Present}
+    {DiGiCOR}{Melbourne, VIC}
+    \resumeItemListStart
+      \resumeItem{Led a team of four to develop a dashboard for sales data analysis in Streamlit, pulling data from NetSuite's REST API to improve the productivity of the DiGiCOR sales team}
+
+    \resumeItemListEnd
+
     \resumeSubheading{Winter Research Assistant}{June 2022 – July 2022}
     {Monash University}{Melbourne, VIC}
     \resumeItemListStart
-      \resumeItem{Devised a genetic programming framework to a game theoretic problem via simulation in Julia \textbf{\href{https://github.com/saikumarmk/paramless}{here}}}
-      \resumeItem{Coordinated with a professor to gradually investigate feasibility of studying function valued traits to study scientist journal dynamics}
+      \resumeItem{Devised a genetic programming framework for a game theoretic problem via simulation in Julia \textbf{\href{https://github.com/saikumarmk/paramless}{here}}}
+      \resumeItem{Coordinated with a professor to investigate scientist journal dynamics using the above framework}
     \resumeItemListEnd
     
     \resumeSubheading{Summer Research Assistant}{November 2021 – January 2022}
       {Monash University}{Melbourne, VIC}
       \resumeItemListStart
-        \resumeItem{Scraped and wrangled commit diffs from over 30,000 deep-learning libraries using GitHub's REST API}
-        \resumeItem{Extraction, tagging, and inference of evolution of popular deep-learning libraries}
+        \resumeItem{Wrangled commit diffs from over 30,000 deep-learning libraries using GitHub's REST API in Python}
+        \resumeItem{Extraction, tagging, and inference of evolution of popular deep-learning libraries with spaCy}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -152,8 +160,8 @@
       {Contour Education}{Melbourne, VIC}
       \resumeItemListStart
         \resumeItem{Prepared mathematics worksheets for over 100 students undertaking the VCE}
-        \resumeItem{Taught mathematics for high school students, including preparing and running paid workshops for schools}
-        \resumeItem{Creation of software in the Wolfram Mathematica language for nearly 100 students}
+        \resumeItem{Developed and presented three mathematics workshops for secondary schools}
+        \resumeItem{Creation of software in the Wolfram Mathematica language for over 300 students}
       \resumeItemListEnd
       
      
@@ -167,10 +175,9 @@
       {Events Director}{March 2021 – Present}
       {Monash Association of Coding (MAC)}{Melbourne, VIC}
       \resumeItemListStart
-        \resumeItem{Assisted and taught 4 coding workshops totalling over 150 attendees}
-        \resumeItem{Ran over 24 weekly LeetCode sessions in which mock technical interviews were conducted}
-        \resumeItem{Employed data analytics to target effective workshop strategies and aid with future planning of events}
-        \resumeItem{Assisted with a two-week hackathon involving over 200 contestants, involved communication with teams, setting up and presenting events and judging submission}
+        \resumeItem{Taught 4 coding workshops totalling over 200 attendees in Python - FastAPI, discord.py, and web development}
+        \resumeItem{Ran 15 weekly mock technical interviews with LeetCode in preparation for software-development roles}
+        \resumeItem{Managed MAC x Hacksprint, a two-week hackathon with over 200 participants}
       \resumeItemListEnd
       
     \resumeSubHeadingListEnd
@@ -183,13 +190,13 @@
           {\textbf{Mini Melbourne} $|$ \emph{Fullstack, Live data, React, Mapbox, FastAPI}}{\href{https://github.com/weLoveTrainz/MiniMelbourne}{GitHub} - \href{https://devpost.com/software/minimebourne}{DevPost}}
           \resumeItemListStart
             \resumeItem{A live train map of Melbourne, built during UniHack 2022, winning the PwC Data Analytics prize}
-            \resumeItem{Built using FastAPI for backend to serve data, with React rendering the data with Mapbox}
+            \resumeItem{Built using FastAPI for backend, serving real-time train data of upto 150 trains}
           \resumeItemListEnd
 
       \resumeProjectHeading
-          {\textbf{SETool} $|$ \emph{Data Visualisation, Python, Scraping}}{\href{https://github.com/saikumarmk/SETool}{GitHub} - \href{http://http://setool.herokuapp.com/}{Site} }
+          {\textbf{SETool} $|$ \emph{Data Visualisation, Python, Scraping, Dash, Plotly, Heroku}}{\href{https://github.com/saikumarmk/SETool}{GitHub} - \href{http://http://setool.herokuapp.com/}{Site} }
           \resumeItemListStart
-            \resumeItem{A web-based visualisation tool for comparing units, coded in Python and Dash}
+            \resumeItem{A web dashboard for comparing course reviews, used by over 1000 students}
           \resumeItemListEnd
 
           \resumeProjectHeading
@@ -206,9 +213,9 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Python, C/C++, R, Rust, MATLAB, Wolfram Mathematica} \\
-     \textbf{Libraries}{: Data science (Pandas, NumPy, SciPy, PyTorch, Seaborn), FastAPI, Dash/Plotly,} \\
-     \textbf{Mathematics}{: Graph Theory, Computational Mathematics, Linear Algebra, Real+Complex Analysis, Multivariate Calculus, Abstract Algebra, Optimisation and Operations Research}
+     \textbf{Languages}{: Python, C/C++, R, Rust, MATLAB, Java, Wolfram Mathematica} \\
+     \textbf{Libraries}{: Data science (Pandas, NumPy, SciPy, PyTorch, Seaborn, Streamlit), FastAPI, Dash/Plotly} \\
+     \textbf{Mathematics}{: Graph Theory, Computational methods, Optimisation and Operations Research, Linear Algebra, Calculus + Analysis, Statistics }
     }}
  \end{itemize}
 
