--- a/resume.tex
+++ b/resume.tex
@@ -135,21 +135,21 @@
 \section{Experience}
   \resumeSubHeadingListStart
     \resumeSubheading{Data Science Intern }{July 2022 – Present}
-    {DiGiCOR}{Melbourne, VIC}
+    {DiGiCOR}{}
     \resumeItemListStart
       \resumeItem{Led a team of four to develop a dashboard for sales data analysis in Streamlit, pulling data from NetSuite's REST API to improve the productivity of the DiGiCOR sales team}
 
     \resumeItemListEnd
 
     \resumeSubheading{Winter Research Assistant}{June 2022 – July 2022}
-    {Monash University}{Melbourne, VIC}
+    {Monash University}{}
     \resumeItemListStart
       \resumeItem{Devised a genetic programming framework for a game theoretic problem via simulation in Julia \textbf{\href{https://github.com/saikumarmk/paramless}{here}}}
       \resumeItem{Coordinated with a professor to investigate scientist journal dynamics using the above framework}
     \resumeItemListEnd
     
     \resumeSubheading{Summer Research Assistant}{November 2021 – January 2022}
-      {Monash University}{Melbourne, VIC}
+      {Monash University}{}
       \resumeItemListStart
         \resumeItem{Wrangled commit diffs from over 30,000 deep-learning libraries using GitHub's REST API in Python}
         \resumeItem{Extraction, tagging, and inference of evolution of popular deep-learning libraries with spaCy}
@@ -157,7 +157,7 @@
 
     \resumeSubheading
       {Co-founder and Tutor}{February 2020 – Present}
-      {Contour Education}{Melbourne, VIC}
+      {Contour Education}{}
       \resumeItemListStart
         \resumeItem{Prepared mathematics worksheets for over 100 students undertaking the VCE}
         \resumeItem{Developed and presented three mathematics workshops for secondary schools}
@@ -173,7 +173,7 @@
 
     \resumeSubheading
       {Events Director}{March 2021 – Present}
-      {Monash Association of Coding (MAC)}{Melbourne, VIC}
+      {Monash Association of Coding (MAC)}{}
       \resumeItemListStart
         \resumeItem{Taught 4 coding workshops totalling over 200 attendees in Python - FastAPI, discord.py, and web development}
         \resumeItem{Ran 15 weekly mock technical interviews with LeetCode in preparation for software-development roles}
