--- a/resume.tex
+++ b/resume.tex
@@ -172,7 +172,7 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Events Director}{March 2021 – Present}
+      {President}{March 2021 – Present}
       {Monash Association of Coding (MAC)}{}
       \resumeItemListStart
         \resumeItem{Taught 4 coding workshops totalling over 200 attendees in Python - FastAPI, discord.py, and web development}
