Added canva internship

--- a/resume.tex
+++ b/resume.tex
@@ -109,10 +109,10 @@
 
 \begin{center}
     \textbf{\Huge \scshape Sai kumar Murali krishnan} \\ \vspace{1pt}
-    \small 04-223-33540 $|$ \href{mailto:saikumarmuralikrishnan@gmailcom}{\underline{saikumarmuralikrishnan@gmail.com}} $|$ 
+    \small  \href{mailto:saikumarmuralikrishnan@gmailcom}{\underline{saikumarmuralikrishnan@gmail.com}} $|$ 
     \href{https://www.linkedin.com/in/sai-kumar-murali-krishnan/}{\underline{LinkedIn}} $|$
     \href{https://github.com/saikumarmk}{\underline{GitHub: saikumarmk}} $|$
-    \href{https://saikumarmk.com}{\underline{Personal Site}}\\ Software Engineer and Data Scientist
+    \href{https://saikumarmk.com}{\underline{Personal Site}}\\ Machine Learning Engineer
 \end{center}
 
 
@@ -123,8 +123,7 @@
       {Monash University}{Expected December 2023}
       {Bachelor of Applied Data Science Honours}{Melbourne, VIC}
           \resumeItemListStart
-            \resumeItem{WAM/GPA: 85}
-            \resumeItem{Coursework: Data science related projects, algorithms and data structures and applied mathematics}
+            \resumeItem{WAM/GPA: 86}
             \resumeItem{Achievements: Dean's List Award for academic excellence, Summer and Winter Research scholarships}
 
         \resumeItemListEnd
@@ -134,7 +133,22 @@
 %-----------EXPERIENCE-----------
 \section{Experience}
   \resumeSubHeadingListStart
-    \resumeSubheading{Data Science Intern }{July 2022 – Present}
+  \resumeSubheading{Machine Learning Engineer Intern }{November 2022 – February 2023}
+  {Canva}{}
+  \resumeItemListStart
+  \resumeItem{Developed a debiasing framework for StableDiffusion, a text to image model}
+  \resumeItem{Researched bias mitigation for harmful and nonrepresentative outputs from text to image models}
+  \resumeItemListEnd
+
+  \resumeSubheading
+  {Co-founder and Tutor}{February 2020 – November 2022}
+  {Contour Education}{}
+  \resumeItemListStart
+    \resumeItem{Prepared mathematics worksheets for over 100 students undertaking the VCE}
+    \resumeItem{Creation of software in the Wolfram Mathematica language for over 300 students}
+  \resumeItemListEnd
+
+    \resumeSubheading{Data Science Intern }{July 2022 – October 2022}
     {DiGiCOR}{}
     \resumeItemListStart
       \resumeItem{Led a team of four to develop a dashboard for sales data analysis in Streamlit, pulling data from NetSuite's REST API to improve the productivity of the DiGiCOR sales team}
@@ -154,16 +168,6 @@
         \resumeItem{Wrangled commit diffs from over 30,000 deep-learning libraries using GitHub's REST API in Python}
         \resumeItem{Extraction, tagging, and inference of evolution of popular deep-learning libraries with spaCy}
       \resumeItemListEnd
-
-    \resumeSubheading
-      {Co-founder and Tutor}{February 2020 – Present}
-      {Contour Education}{}
-      \resumeItemListStart
-        \resumeItem{Prepared mathematics worksheets for over 100 students undertaking the VCE}
-        \resumeItem{Developed and presented three mathematics workshops for secondary schools}
-        \resumeItem{Creation of software in the Wolfram Mathematica language for over 300 students}
-      \resumeItemListEnd
-      
      
     \resumeSubHeadingListEnd
 
@@ -186,6 +190,7 @@
 \section{Projects}
 
     \resumeSubHeadingListStart
+
       \resumeProjectHeading
           {\textbf{Mini Melbourne} $|$ \emph{Fullstack, Live data, React, Mapbox, FastAPI}}{\href{https://github.com/weLoveTrainz/MiniMelbourne}{GitHub} - \href{https://devpost.com/software/minimebourne}{DevPost}}
           \resumeItemListStart
@@ -215,7 +220,7 @@
     \small{\item{
      \textbf{Languages}{: Python, C/C++, R, Rust, MATLAB, Java, Wolfram Mathematica} \\
      \textbf{Libraries}{: Data science (Pandas, NumPy, SciPy, PyTorch, Seaborn, Streamlit), FastAPI, Dash/Plotly} \\
-     \textbf{Mathematics}{: Graph Theory, Computational methods, Optimisation and Operations Research, Linear Algebra, Calculus + Analysis, Statistics }
+     \textbf{Mathematics}{: Graph Theory, Computational methods, Optimisation and Operations Research, Linear Algebra, Calculus, Statistics }
     }}
  \end{itemize}
 
