--- a/resume.tex
+++ b/resume.tex
@@ -120,11 +120,12 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Monash University}{Expected December 2023}
-      {Bachelor of Applied Data Science Honours}{Melbourne, VIC}
+      {Monash University}{February 2020 - December 2023}
+      {Bachelor of Applied Data Science Advanced (Honours)}{Melbourne, VIC}
           \resumeItemListStart
-            \resumeItem{WAM/GPA: 86}
+            \resumeItem{WAM/GPA: 87}
             \resumeItem{Achievements: Dean's List Award for academic excellence, Summer and Winter Research scholarships}
+            \resumeItem{Thesis: Bias Modelling and Mitigation in Diffusion Models}
 
         \resumeItemListEnd
 
@@ -133,30 +134,34 @@
 %-----------EXPERIENCE-----------
 \section{Experience}
   \resumeSubHeadingListStart
-  \resumeSubheading{Machine Learning Engineer Intern }{November 2022 – February 2023}
-  {Canva}{}
+  \resumeSubheading{Canva}{Melbourne, VIC}
+  {Machine Learning Engineer}{Expected Start: February 2024}
+  \resumeItemListStart
+  \resumeItem{To be continued...}
+  \resumeItemListEnd
+  
+  \resumeSubSubheading{Machine Learning Engineer Intern}{November 2022 – February 2023}
   \resumeItemListStart
   \resumeItem{Developed a debiasing framework for Stable Diffusion for Canva's Text to Image feature}
   \resumeItem{Researched and developed bias mitigation strategies targetting Stable Diffusion, addressing harmful and nonrepresentative biases in sensitive categories such as gender and ethnicity}
+  
   \resumeItemListEnd
-
-    \resumeSubheading{Data Science Intern }{July 2022 – October 2022}
-    {DiGiCOR}{}
+    \resumeSubheading{DiGiCOR }{Melbourne, VIC}
+    {Data Science Intern}{July 2022 – October 2022}
     \resumeItemListStart
       \resumeItem{Managed a team of four to build a sales dashboard using Streamlit, pulling data from NetSuite's REST API}
 
     \resumeItemListEnd
 
-    \resumeSubheading{Winter Research Assistant}{June 2022 – July 2022}
-    {Monash University - \textbf{\href{https://github.com/saikumarmk/paramless}{GitHub}}}{With Dr Julian Garcia}
+    \resumeSubheading{Monash University}{Melbourne, VIC}
+    {Winter Research Assistant - with Dr Julian Garcia \textbf{\href{https://github.com/saikumarmk/paramless}{(GitHub)}} }{June 2022 – July 2022}
     \resumeItemListStart
       \resumeItem{Developed a genetic programming framework using simulation in Julia to address a game theoretic problem}
     \resumeItemListEnd
     
-    \resumeSubheading{Summer Research Assistant}{November 2021 – January 2022}
-      {Monash University - \textbf{\href{https://github.com/saikumarmk/DLEvolution}{GitHub}}}{With Dr Xiaoning Du}
+    \resumeSubSubheading{Summer Research Assistant - with Dr Xiaoning Du \textbf{\href{https://github.com/saikumarmk/DLEvolution}{(GitHub)}} }{November 2021 - January 2022}
       \resumeItemListStart
-        \resumeItem{Parsed and analyzed (tagging, NLP) commit data from over 30,000 deep-learning libraries using GitHub's REST API and Python to understand the evolution of deep-learning libraries for AutoML}
+        \resumeItem{Parsed and analyzed commit data from over 30,000 deep-learning libraries using GitHub's REST API and Python to understand the evolution of deep-learning libraries for AutoML}
       \resumeItemListEnd
      
     \resumeSubHeadingListEnd
@@ -166,8 +171,8 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {President}{March 2021 – Present}
-      {Monash Association of Coding (MAC)}{}
+      {Monash Association of Coding (MAC)}{March 2021 – September 2023}
+      {President}{}
       \resumeItemListStart
         \resumeItem{Overseen growth to nearly 1000 members, running a technical careers evening with over 100 attendees}
         \resumeItem{Conducted 4 successful coding workshops in Python, covering topics such as FastAPI, discord.py, and web development, reaching over 200 attendees}
