added end of uni stuff

--- a/resume.tex
+++ b/resume.tex
@@ -124,7 +124,7 @@
       {Bachelor of Applied Data Science Advanced (Honours)}{Melbourne, VIC}
           \resumeItemListStart
             \resumeItem{WAM/GPA: 87}
-            \resumeItem{Achievements: Dean's List Award for academic excellence, Summer and Winter Research scholarships}
+            \resumeItem{Achievements: Dean's List Award for academic excellence (2021, 2022), Summer and Winter Research scholarships}
             \resumeItem{Thesis: Bias Modelling and Mitigation in Diffusion Models}
 
         \resumeItemListEnd
