final resume update for the year
- added hyperlinks to companies and thesis
- added final honours grade

--- a/resume.tex
+++ b/resume.tex
@@ -121,11 +121,11 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Monash University}{February 2020 - December 2023}
-      {Bachelor of Applied Data Science Advanced (Honours)}{Melbourne, VIC}
+      {\href{https://handbook.monash.edu/2020/courses/S3003?year=2020}{Bachelor of Applied Data Science Advanced (Honours)}}{Melbourne, VIC}
           \resumeItemListStart
-            \resumeItem{WAM/GPA: 87}
-            \resumeItem{Achievements: Dean's List Award for academic excellence (2021, 2022), Summer and Winter Research scholarships}
-            \resumeItem{Thesis: Bias Modelling and Mitigation in Diffusion Models}
+            \resumeItem{First Class Honours with a final grade of 90}
+            \resumeItem{Dean's List Award for academic excellence (2021, 2022), Summer and Winter Research scholarships}
+            \href{https://saikumarmk.com/assets/honours_thesis.pdf}{\resumeItem{Thesis: Bias Modelling and Mitigation in Diffusion Models}}
 
         \resumeItemListEnd
 
@@ -134,7 +134,7 @@
 %-----------EXPERIENCE-----------
 \section{Experience}
   \resumeSubHeadingListStart
-  \resumeSubheading{Canva}{Melbourne, VIC}
+  \resumeSubheading{\href{https://canva.com}{Canva}}{Melbourne, VIC}
   {Machine Learning Engineer}{Expected Start: February 2024}
   \resumeItemListStart
   \resumeItem{To be continued...}
@@ -146,14 +146,14 @@
   \resumeItem{Researched and developed bias mitigation strategies targetting Stable Diffusion, addressing harmful and nonrepresentative biases in sensitive categories such as gender and ethnicity}
   
   \resumeItemListEnd
-    \resumeSubheading{DiGiCOR }{Melbourne, VIC}
+    \resumeSubheading{\href{https://digicor.com.au/}{DiGiCOR}}{Melbourne, VIC}
     {Data Science Intern}{July 2022 – October 2022}
     \resumeItemListStart
       \resumeItem{Managed a team of four to build a sales dashboard using Streamlit, pulling data from NetSuite's REST API}
 
     \resumeItemListEnd
 
-    \resumeSubheading{Monash University}{Melbourne, VIC}
+    \resumeSubheading{\href{https://www.monash.edu/it}{Monash University}}{Melbourne, VIC}
     {Winter Research Assistant - with Dr Julian Garcia \textbf{\href{https://github.com/saikumarmk/paramless}{(GitHub)}} }{June 2022 – July 2022}
     \resumeItemListStart
       \resumeItem{Developed a genetic programming framework using simulation in Julia to address a game theoretic problem}
@@ -171,7 +171,7 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Monash Association of Coding (MAC)}{March 2021 – September 2023}
+      {\href{https://www.monashcoding.com/}{Monash Association of Coding (MAC)}}{March 2021 – September 2023}
       {President}{}
       \resumeItemListStart
         \resumeItem{Overseen growth to nearly 1000 members, running a technical careers evening with over 100 attendees}
