--- a/resume.tex
+++ b/resume.tex
@@ -116,28 +116,14 @@
 \end{center}
 
 
-%-----------EDUCATION-----------
-\section{Education}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {Monash University}{February 2020 - December 2023}
-      {\href{https://handbook.monash.edu/2020/courses/S3003?year=2020}{Bachelor of Applied Data Science Advanced (Honours)}}{Melbourne, VIC}
-          \resumeItemListStart
-            \resumeItem{First Class Honours with a final grade of 90}
-            \resumeItem{Dean's List Award for academic excellence (2021, 2022), Summer and Winter Research scholarships}
-            \href{https://saikumarmk.com/assets/honours_thesis.pdf}{\resumeItem{Thesis: Bias Modelling and Mitigation in Diffusion Models}}
-
-        \resumeItemListEnd
-
-  \resumeSubHeadingListEnd
 
 %-----------EXPERIENCE-----------
 \section{Experience}
   \resumeSubHeadingListStart
   \resumeSubheading{\href{https://canva.com}{Canva}}{Melbourne, VIC}
-  {Machine Learning Engineer}{Expected Start: February 2024}
+  {Machine Learning Engineer}{February 2024 - Ongoing}
   \resumeItemListStart
-  \resumeItem{To be continued...}
+  \resumeItem{Machine Learning Engineer in the Photo Editor Group}
   \resumeItemListEnd
   
   \resumeSubSubheading{Machine Learning Engineer Intern}{November 2022 – February 2023}
@@ -166,15 +152,31 @@
      
     \resumeSubHeadingListEnd
 
+
+%-----------EDUCATION-----------
+\section{Education}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {Monash University}{February 2020 - December 2023}
+      {\href{https://handbook.monash.edu/2020/courses/S3003?year=2020}{Bachelor of Applied Data Science Advanced (Honours)}}{Melbourne, VIC}
+          \resumeItemListStart
+            \resumeItem{First Class Honours with a final grade of 90}
+            \resumeItem{Dean's List Award for academic excellence (2021, 2022), Summer and Winter Research scholarships}
+            \href{https://saikumarmk.com/assets/honours_thesis.pdf}{\resumeItem{Thesis: Bias Modelling and Mitigation in Diffusion Models}}
+
+        \resumeItemListEnd
+
+  \resumeSubHeadingListEnd
+
 %-----------COMMUNITY AND LEADERSHIP-----------
 \section{Community \& Leadership}
   \resumeSubHeadingListStart
 
     \resumeSubheading
       {\href{https://www.monashcoding.com/}{Monash Association of Coding (MAC)}}{March 2021 – September 2023}
-      {President}{}
+      {President ← Events Director ← Events Officer}{}
       \resumeItemListStart
-        \resumeItem{Overseen growth to nearly 1000 members, running a technical careers evening with over 100 attendees}
+        \resumeItem{Overseen growth to over 1100 members, running a technical careers evening with over 100 attendees}
         \resumeItem{Conducted 4 successful coding workshops in Python, covering topics such as FastAPI, discord.py, and web development, reaching over 200 attendees}
         \resumeItem{Led 15 weekly mock technical interviews with LeetCode, preparing students for software-development roles}
         \resumeItem{Organized and oversaw MAC x Hacksprint, a two-week hackathon attracting more than 200 participants}
